--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,11 @@
-# Python support in IntelliJ IDEA 2016 is ignoring all the "ignore" directives, although it claims to support them.
-[pycodestyle]
-ignore = N802, N803, N806
-
-[pep8]
-ignore = E501
-
-[flake8]
-ignore = N802, N803, N806
+[DEFAULT]
 # Codes are case sensitive!
+# E501 line too long
 # N802 function name should be lowercase
 # N803 argument name should be lowercase
 # N806 variable in function should be lowercase
+ignore = N802, N803, N806, E501
+
+# Python support in IntelliJ IDEA 2016 is ignoring all the "ignore" directives, although it claims to support them.
+[pycodestyle]
+ignore = N802, N803, N806
