arcgis-api: Added a problem code to ignore and better explanation.

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,23 @@
 [DEFAULT]
-# Codes are case sensitive!
-# E501 line too long
+# Warning: Style and naming problem codes are case sensitive!
+#
+# Below are some codes we've chosen to ignore.  The naming ones are
+# especially annoying.
+#
+# Style problems detected by pycodestyle.  See:
+# https://github.com/PyCQA/pycodestyle/blob/master/docs/intro.rst#error-codes
+# E501 line too long (nnn > 79 characters)
+#
+# Naming problems detected by pep8-naming plugin for flake8.  See:
+# https://github.com/PyCQA/pep8-naming/blob/master/README.rst#plugin-for-flake8
 # N802 function name should be lowercase
 # N803 argument name should be lowercase
 # N806 variable in function should be lowercase
-ignore = N802, N803, N806, E501
+# N812 lowercase imported as non lowercase
+ignore = E501, N802, N803, N806, N812
 
 # Python support in IntelliJ IDEA 2016 is ignoring all the "ignore" directives, although it claims to support them.
 [pycodestyle]
-ignore = N802, N803, N806
+ignore = E501, N802, N803, N806, N812
+
+[flake8]
