--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@
 # IntelliJ IDEA's Python plugin has a bug that causes it to always
 # report this Python version requirement as not satisfied.  It's
 # valid for pip.  IDEA can be told to ignore this requirement.
-python >= 2.7
+# ArcREST's code requires Python 2.7.9 or greater, even though
+# its requirements.txt doesn't state it.
+python >= 2.7.9
 
 python-dateutil
 requests
