--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,11 @@
 # valid for pip.  IDEA can be told to ignore this requirement.
 # ArcREST's code requires Python 2.7.9 or greater, even though
 # its requirements.txt doesn't state it.
-python >= 2.7.9
+#python >= 2.7.9
+# For now, the MiServer services can only provide up to Python 2.7.8,
+# but with great effort.  We will stick with 2.7.5 and hack our copy
+# of ArcREST to work with that.
+python >= 2.7.5
 
 python-dateutil
 requests
