TLKAR2-5: update to support reading secrets from separate directory, overriding values with environment variables, virtual python environments on osx.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *-.py
 
+/OPT
+secrets.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -89,3 +92,4 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
