--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Note: this does not include arcgis, which needs to be installed manually when using virtualenv.
 # Use the following command: pip install arcgis --no-deps
 
-beautifulsoup4==4.9.3
+beautifulsoup4==4.10.0
+cachetools==4.2.4
 ntlm-auth==1.5.0
 python-dateutil==2.8.2
 requests==2.26.0
