--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,3 @@
-# Note: this does not include ArcGIS, which must be installed separately when
-# using containers.  See `Dockerfile` for more information.
-
-beautifulsoup4==4.9.3
-ntlm-auth==1.5.0
-python-dateutil==2.8.2
-requests==2.26.0
-requests-toolbelt==0.9.1
-requests_ntlm==1.1.0
-six==1.16.0
-standard-imghdr==3.13.0
-ujson==5.10.0
-url-normalize==1.4.3
+arcgis==2.4.2
+beautifulsoup4==4.14.2
+url-normalize==2.2.1
